<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/text_displays_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/throwsLeftDisplay"
        android:layout_width="81dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/throws_left_display"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/roundsLeftDisplay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/text_displays_guideline"
        />

    <TextView
        android:id="@+id/throwsLeftDisplayCount"
        android:layout_width="34dp"
        android:layout_height="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/roundsLeftDisplayCount"
        app:layout_constraintLeft_toLeftOf="@id/text_displays_guideline"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/roundsLeftDisplay"
        android:layout_width="81dp"
        android:layout_height="18dp"
        android:text="@string/rounds_left_display"
        app:layout_constraintTop_toTopOf="@+id/throwsLeftDisplay"
        app:layout_constraintBottom_toBottomOf="@+id/diceScoreDisplay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/text_displays_guideline"
        />

    <TextView
        android:id="@+id/roundsLeftDisplayCount"
        android:layout_width="34dp"
        android:layout_height="18dp"
        app:layout_constraintTop_toTopOf="@id/throwsLeftDisplayCount"
        app:layout_constraintBottom_toBottomOf="@id/diceScoreDisplayCount"
        app:layout_constraintLeft_toLeftOf="@id/text_displays_guideline"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/diceScoreDisplay"
        android:layout_width="81dp"
        android:layout_height="18dp"
        android:text="@string/dice_score_display"
        app:layout_constraintTop_toTopOf="@id/roundsLeftDisplay"
        app:layout_constraintBottom_toBottomOf="@id/scoreDisplay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/text_displays_guideline"
        />

    <TextView
        android:id="@+id/diceScoreDisplayCount"
        android:layout_width="34dp"
        android:layout_height="18dp"
        app:layout_constraintTop_toTopOf="@id/roundsLeftDisplayCount"
        app:layout_constraintBottom_toBottomOf="@id/scoreDisplayCount"
        app:layout_constraintLeft_toLeftOf="@id/text_displays_guideline"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/scoreDisplay"
        android:layout_width="48dp"
        android:layout_height="18dp"
        android:text="@string/score_display"
        app:layout_constraintTop_toTopOf="@id/diceScoreDisplay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/text_displays_guideline"
        />

    <TextView
        android:id="@+id/scoreDisplayCount"
        android:layout_width="34dp"
        android:layout_height="18dp"
        app:layout_constraintTop_toTopOf="@id/diceScoreDisplayCount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/text_displays_guideline"
        app:layout_constraintRight_toRightOf="parent"
        />


</android.support.constraint.ConstraintLayout>