<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    tools:context=".GameActivity"
    >

    <android.support.constraint.Guideline
        android:id="@+id/game_activity_guidline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <android.support.constraint.Guideline
        android:id="@+id/game_activity_guidline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <include
        android:id="@+id/text_displays"
        layout="@layout/content_game_activity_text_displays"
        android:layout_width="177dp"
        android:layout_height="202dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@id/game_activity_guidline_top"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/quitBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/quitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/quit_game"
        android:textColor="@color/foreground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/game_activity_guidline_top"
        app:layout_constraintLeft_toRightOf="@id/text_displays"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.064"
        app:layout_constraintHorizontal_bias="0.948"
        />

    <include
        android:id="@+id/dice_table"
        layout="@layout/content_game_activity_dice_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="@id/game_activity_guidline_bottom"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/game_activity_guidline_top"
        app:layout_constraintVertical_bias="0.553" />

    <Button
        android:id="@+id/mainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@color/button"
        android:onClick="showPopupMenu"
        android:text="@string/start_rolling"
        android:textColor="@color/foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/strategyBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/strategyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@color/button"
        android:text="@string/choose_strategy"
        android:textColor="@color/foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/mainBtn"
        />


</android.support.constraint.ConstraintLayout>